// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tile ab huge 1`] = `
<style>
.IS1 {
  margin-bottom: 0px;
}

.IS2 {
  color: #333333;
  font-family: TimesModern-Bold;
  font-weight: 400;
  margin-bottom: 5;
  font-size: 45;
  line-height: 45px;
}

.IS3 {
  color: inherit;
  font: inherit;
  white-space: inherit;
}

.IS4 {
  color: #696969;
  flex-wrap: wrap;
  margin-bottom: 10px;
  font-family: TimesDigitalW04;
  font-size: 14;
  line-height: 20px;
  margin-top: 5;
}

.IS5 {
  -webkit-flex-grow: 1;
  flex-grow: 1;
  -webkit-flex-shrink: 1;
  flex-shrink: 1;
  -webkit-flex-basis: 0%;
  flex-basis: 0%;
  -ms-flex-positive: 1;
  -webkit-box-flex: 1;
  -ms-flex-negative: 1;
  -ms-flex-preferred-size: 0%;
}

.IS6 {
  -webkit-flex-grow: 0.74;
  flex-grow: 0.74;
  -webkit-flex-shrink: 1;
  flex-shrink: 1;
  -webkit-flex-basis: 0%;
  flex-basis: 0%;
  padding-right: 20px;
  -ms-flex-positive: 0.74;
  -webkit-box-flex: 0.74;
  -ms-flex-negative: 1;
  -ms-flex-preferred-size: 0%;
}

.IS7 {
  flex: 0.26;
}
</style>

<Link
  linkStyle={
    Object {
      "flex": 1,
      "flexDirection": "row",
      "paddingHorizontal": "10px",
      "paddingVertical": "15px",
    }
  }
  url="/article/123"
>
  <div
    className="css-view-1dbjc4n IS6"
  >
    <div
      className="css-view-1dbjc4n IS5"
    >
      <div
        className="css-view-1dbjc4n"
      >
        <div
          className="tc-view__TcView-nuazoi-0 fPjBcr"
        >
          <div
            className="tc-view__TcView-nuazoi-0 fPjBcr IS1"
          >
            <ArticleLabel
              color="#005B8D"
              isVideo={false}
              title="label"
            />
          </div>
          <div
            aria-level="3"
            className="tc-text__TcText-sc-15igzev-0 lhcAkf IS2"
            role="heading"
          >
            This is tile headline
          </div>
          <div
            className="tc-text__TcText-sc-15igzev-0 lhcAkf IS4"
          >
            <div
              className="tc-text__TcText-sc-15igzev-0 lhcAkf IS3"
            >
              
              Senior ministers accused Labour today of trying to “frustrate and cancel Brexit” after the party announced plans to hijack Boris Johnson’s deal with amendments for a second referendum and customs union with the EU. Rishi Sunak, the chief secretary to the Treasury, warned that any attempt by MPs to add a customs union to the government’s Brexit deal would be “procedural tricks” intended to frustrate departure. His comments came as ministers announced that they planned to publish the legislation that would formally take Britain out of the European Union today. They will also apply to the Speaker to hold another so-called meaningful vote on the deal following Mr Johnson’s decision to comply with the Benn act, which forces the prime minister to request a Brexit
              ...
            </div>
          </div>
          <ArticleFlags
            flags={
              Array [
                Object {
                  "expiryTime": "2030-03-14T12:00:00.000Z",
                  "type": "EXCLUSIVE",
                },
              ]
            }
            longRead={true}
          />
        </div>
      </div>
    </div>
  </div>
  <Image
    aspectRatio={0.6666666666666666}
    className="IS7"
    fill={true}
    uri="//www.thetimes.co.uk/imageserver/image/%2Fmethode%2Ftimes%2Fprod%2Fweb%2Fbin%2F5a14c64e-06db-11e9-abe2-4909b2eb0130.jpg?crop=1195%2C1792%2C747%2C0"
  />
</Link>
`;

exports[`tile ab medium 1`] = `
<style>
.IS1 {
  margin-bottom: 0px;
}

.IS2 {
  color: #333333;
  font-family: TimesModern-Bold;
  font-weight: 400;
  margin-bottom: 5;
  font-size: 30;
  line-height: 30px;
}

.IS3 {
  color: inherit;
  font: inherit;
  white-space: inherit;
}

.IS4 {
  color: #696969;
  flex-wrap: wrap;
  margin-bottom: 10px;
  font-family: TimesDigitalW04;
  font-size: 14;
  line-height: 20px;
  margin-top: 5;
}

.IS5 {
  -webkit-flex-grow: 1;
  flex-grow: 1;
  -webkit-flex-shrink: 1;
  flex-shrink: 1;
  -webkit-flex-basis: 0%;
  flex-basis: 0%;
  -ms-flex-positive: 1;
  -webkit-box-flex: 1;
  -ms-flex-negative: 1;
  -ms-flex-preferred-size: 0%;
}

.IS6 {
  -webkit-flex-grow: 0.56;
  flex-grow: 0.56;
  -webkit-flex-shrink: 1;
  flex-shrink: 1;
  -webkit-flex-basis: 0%;
  flex-basis: 0%;
  padding-right: 20px;
  -ms-flex-positive: 0.56;
  -webkit-box-flex: 0.56;
  -ms-flex-negative: 1;
  -ms-flex-preferred-size: 0%;
}

.IS7 {
  flex: 0.44;
}
</style>

<Link
  linkStyle={
    Object {
      "flex": 1,
      "flexDirection": "row",
      "paddingHorizontal": "10px",
      "paddingVertical": "15px",
    }
  }
  url="/article/123"
>
  <div
    className="css-view-1dbjc4n IS6"
  >
    <div
      className="css-view-1dbjc4n IS5"
    >
      <div
        className="css-view-1dbjc4n"
      >
        <div
          className="tc-view__TcView-nuazoi-0 fPjBcr"
        >
          <div
            className="tc-view__TcView-nuazoi-0 fPjBcr IS1"
          >
            <ArticleLabel
              color="#005B8D"
              isVideo={false}
              title="label"
            />
          </div>
          <div
            aria-level="3"
            className="tc-text__TcText-sc-15igzev-0 lhcAkf IS2"
            role="heading"
          >
            This is tile headline
          </div>
          <div
            className="tc-text__TcText-sc-15igzev-0 lhcAkf IS4"
          >
            <div
              className="tc-text__TcText-sc-15igzev-0 lhcAkf IS3"
            >
              
              Senior ministers accused Labour today of trying to “frustrate and cancel Brexit” after the party announced plans to hijack Boris Johnson’s deal with amendments for a second referendum and customs union with the EU. Rishi Sunak, the chief secretary to the Treasury, warned that any attempt by MPs to add a customs union to the government’s Brexit deal would be “procedural tricks” intended to frustrate departure. His comments came as ministers announced that they planned to publish the legislation that would formally take Britain out of the European Union today. They will also apply to the Speaker to hold another so-called meaningful vote on the deal following Mr Johnson’s decision to comply with the Benn act, which forces the prime minister to request a Brexit
              ...
            </div>
          </div>
          <ArticleFlags
            flags={
              Array [
                Object {
                  "expiryTime": "2030-03-14T12:00:00.000Z",
                  "type": "EXCLUSIVE",
                },
              ]
            }
            longRead={true}
          />
        </div>
      </div>
    </div>
  </div>
  <Image
    aspectRatio={0.6666666666666666}
    className="IS7"
    fill={true}
    uri="//www.thetimes.co.uk/imageserver/image/%2Fmethode%2Ftimes%2Fprod%2Fweb%2Fbin%2F5a14c64e-06db-11e9-abe2-4909b2eb0130.jpg?crop=1195%2C1792%2C747%2C0"
  />
</Link>
`;

exports[`tile ab wide 1`] = `
<style>
.IS1 {
  margin-bottom: 0px;
}

.IS2 {
  color: #333333;
  font-family: TimesModern-Bold;
  font-weight: 400;
  margin-bottom: 5;
  font-size: 40;
  line-height: 40px;
}

.IS3 {
  color: inherit;
  font: inherit;
  white-space: inherit;
}

.IS4 {
  color: #696969;
  flex-wrap: wrap;
  margin-bottom: 10px;
  font-family: TimesDigitalW04;
  font-size: 14;
  line-height: 20px;
  margin-top: 5;
}

.IS5 {
  -webkit-flex-grow: 1;
  flex-grow: 1;
  -webkit-flex-shrink: 1;
  flex-shrink: 1;
  -webkit-flex-basis: 0%;
  flex-basis: 0%;
  -ms-flex-positive: 1;
  -webkit-box-flex: 1;
  -ms-flex-negative: 1;
  -ms-flex-preferred-size: 0%;
}

.IS6 {
  -webkit-flex-grow: 1;
  flex-grow: 1;
  -webkit-flex-shrink: 1;
  flex-shrink: 1;
  -webkit-flex-basis: 0%;
  flex-basis: 0%;
  padding-right: 20px;
  -ms-flex-positive: 1;
  -webkit-box-flex: 1;
  -ms-flex-negative: 1;
  -ms-flex-preferred-size: 0%;
}

.IS7 {
  flex: 1;
}
</style>

<Link
  linkStyle={
    Object {
      "flex": 1,
      "flexDirection": "row",
      "paddingHorizontal": "10px",
      "paddingVertical": "15px",
    }
  }
  url="/article/123"
>
  <div
    className="css-view-1dbjc4n IS6"
  >
    <div
      className="css-view-1dbjc4n IS5"
    >
      <div
        className="css-view-1dbjc4n"
      >
        <div
          className="tc-view__TcView-nuazoi-0 fPjBcr"
        >
          <div
            className="tc-view__TcView-nuazoi-0 fPjBcr IS1"
          >
            <ArticleLabel
              color="#005B8D"
              isVideo={false}
              title="label"
            />
          </div>
          <div
            aria-level="3"
            className="tc-text__TcText-sc-15igzev-0 lhcAkf IS2"
            role="heading"
          >
            This is tile headline
          </div>
          <div
            className="tc-text__TcText-sc-15igzev-0 lhcAkf IS4"
          >
            <div
              className="tc-text__TcText-sc-15igzev-0 lhcAkf IS3"
            >
              
              Senior ministers accused Labour today of trying to “frustrate and cancel Brexit” after the party announced plans to hijack Boris Johnson’s deal with amendments for a second referendum and customs union with the EU. Rishi Sunak, the chief secretary to the Treasury, warned that any attempt by MPs to add a customs union to the government’s Brexit deal would be “procedural tricks” intended to frustrate departure. His comments came as ministers announced that they planned to publish the legislation that would formally take Britain out of the European Union today. They will also apply to the Speaker to hold another so-called meaningful vote on the deal following Mr Johnson’s decision to comply with the Benn act, which forces the prime minister to request a Brexit
              ...
            </div>
          </div>
          <ArticleFlags
            flags={
              Array [
                Object {
                  "expiryTime": "2030-03-14T12:00:00.000Z",
                  "type": "EXCLUSIVE",
                },
              ]
            }
            longRead={true}
          />
        </div>
      </div>
    </div>
  </div>
  <Image
    aspectRatio={0.6666666666666666}
    className="IS7"
    fill={true}
    uri="//www.thetimes.co.uk/imageserver/image/%2Fmethode%2Ftimes%2Fprod%2Fweb%2Fbin%2F5a14c64e-06db-11e9-abe2-4909b2eb0130.jpg?crop=1195%2C1792%2C747%2C0"
  />
</Link>
`;

exports[`tile ab without breakpoint should be like medium 1`] = `
<style>
.IS1 {
  margin-bottom: 0px;
}

.IS2 {
  color: #333333;
  font-family: TimesModern-Bold;
  font-weight: 400;
  margin-bottom: 5;
  font-size: 30;
  line-height: 30px;
}

.IS3 {
  color: inherit;
  font: inherit;
  white-space: inherit;
}

.IS4 {
  color: #696969;
  flex-wrap: wrap;
  margin-bottom: 10px;
  font-family: TimesDigitalW04;
  font-size: 14;
  line-height: 20px;
  margin-top: 5;
}

.IS5 {
  -webkit-flex-grow: 1;
  flex-grow: 1;
  -webkit-flex-shrink: 1;
  flex-shrink: 1;
  -webkit-flex-basis: 0%;
  flex-basis: 0%;
  -ms-flex-positive: 1;
  -webkit-box-flex: 1;
  -ms-flex-negative: 1;
  -ms-flex-preferred-size: 0%;
}

.IS6 {
  -webkit-flex-grow: 0.56;
  flex-grow: 0.56;
  -webkit-flex-shrink: 1;
  flex-shrink: 1;
  -webkit-flex-basis: 0%;
  flex-basis: 0%;
  padding-right: 20px;
  -ms-flex-positive: 0.56;
  -webkit-box-flex: 0.56;
  -ms-flex-negative: 1;
  -ms-flex-preferred-size: 0%;
}

.IS7 {
  flex: 0.44;
}
</style>

<Link
  linkStyle={
    Object {
      "flex": 1,
      "flexDirection": "row",
      "paddingHorizontal": "10px",
      "paddingVertical": "15px",
    }
  }
  url="/article/123"
>
  <div
    className="css-view-1dbjc4n IS6"
  >
    <div
      className="css-view-1dbjc4n IS5"
    >
      <div
        className="css-view-1dbjc4n"
      >
        <div
          className="tc-view__TcView-nuazoi-0 fPjBcr"
        >
          <div
            className="tc-view__TcView-nuazoi-0 fPjBcr IS1"
          >
            <ArticleLabel
              color="#005B8D"
              isVideo={false}
              title="label"
            />
          </div>
          <div
            aria-level="3"
            className="tc-text__TcText-sc-15igzev-0 lhcAkf IS2"
            role="heading"
          >
            This is tile headline
          </div>
          <div
            className="tc-text__TcText-sc-15igzev-0 lhcAkf IS4"
          >
            <div
              className="tc-text__TcText-sc-15igzev-0 lhcAkf IS3"
            >
              
              Senior ministers accused Labour today of trying to “frustrate and cancel Brexit” after the party announced plans to hijack Boris Johnson’s deal with amendments for a second referendum and customs union with the EU. Rishi Sunak, the chief secretary to the Treasury, warned that any attempt by MPs to add a customs union to the government’s Brexit deal would be “procedural tricks” intended to frustrate departure. His comments came as ministers announced that they planned to publish the legislation that would formally take Britain out of the European Union today. They will also apply to the Speaker to hold another so-called meaningful vote on the deal following Mr Johnson’s decision to comply with the Benn act, which forces the prime minister to request a Brexit
              ...
            </div>
          </div>
          <ArticleFlags
            flags={
              Array [
                Object {
                  "expiryTime": "2030-03-14T12:00:00.000Z",
                  "type": "EXCLUSIVE",
                },
              ]
            }
            longRead={true}
          />
        </div>
      </div>
    </div>
  </div>
  <Image
    aspectRatio={0.6666666666666666}
    className="IS7"
    fill={true}
    uri="//www.thetimes.co.uk/imageserver/image/%2Fmethode%2Ftimes%2Fprod%2Fweb%2Fbin%2F5a14c64e-06db-11e9-abe2-4909b2eb0130.jpg?crop=1195%2C1792%2C747%2C0"
  />
</Link>
`;
